added message to student sessions

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="accordion-body scheduleDiv">
+                        <p class="forStudents">These sessions are for students registered in the Data Visualization or Full Stack Web Developer boot camps and are allowed to have one or two sessions per week.</p>
                         <h2>Schedule Session</h2>
                         <a target="_blank" href="https://calendly.com/dv-tutor-team/geronimo-perez"><button id="analyst"
                                 class="btn btn-outline-primary">
@@ -145,6 +146,8 @@
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body scheduleDiv">
+                        <p class="forStudents2">These sessions are for students registered in the Data Visualization or Full Stack Web Developer boot camps and are allowed to have one or two sessions per week.</p>
+
                         <h2>Schedule Session</h2>
                         <a target="_blank" href="https://calendly.com/dv-tutor-team/geronimo-perez"><button id="analyst"
                                 class="btn btn-outline-primary">
