--- a/index.html
+++ b/index.html
@@ -33,14 +33,18 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="accordion-body scheduleDiv">
-                        <p class="forStudents">These sessions are for students registered in the Data Visualization or Full Stack Web Developer boot camps and are allowed to have one or two sessions per week.</p>
+                    <div class="accordion-body">
+                        <p class="forStudents">These sessions are for students registered in the Data Visualization or
+                            Full Stack Web Developer boot camp and are allowed to have one or more sessions per week.
+                        </p>
                         <h2>Schedule Session</h2>
-                        <a target="_blank" href="https://calendly.com/dv-tutor-team/geronimo-perez"><button id="analyst"
-                                class="btn btn-outline-primary">
-                                <h6 class="g-font">Data Analytics</h6>
-                            </button></a>
-                        <div class="scheduleDev">
+                        <div class="scheduleDiv">
+
+                            <a target="_blank" href="https://calendly.com/dv-tutor-team/geronimo-perez"><button
+                                    id="analyst" class="btn btn-outline-primary">
+                                    <h6 class="g-font">Data Analytics</h6>
+                                </button></a>
+
                             <a target="_blank" href="https://calendly.com/fsf-tutor-team/geronimo-perez"><button
                                     id="developer" class="btn btn-outline-primary">
                                     <h6 class="g-font">Web Development</h6>
@@ -68,14 +72,18 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body professionalModal">
-                    <div class="accordion-body scheduleDiv">
+                    <div class="accordion-body">
                         <h2>Schedule Private Session</h2>
-                        <a target="_blank" href="https://calendly.com/geronimo-perez/private-tutoring-session"><button id="analyst"
-                                class="btn btn-outline-primary">
-                                <h6 class="g-font">Data Analytics</h6>
-                            </button></a>
-                        <div class="scheduleDev">
-                            <a target="_blank" href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
+                        <div class="scheduleDiv">
+
+                            <a target="_blank"
+                                href="https://calendly.com/geronimo-perez/private-tutoring-session"><button id="analyst"
+                                    class="btn btn-outline-primary">
+                                    <h6 class="g-font">Data Analytics</h6>
+                                </button></a>
+
+                            <a target="_blank"
+                                href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
                                     id="developer" class="btn btn-outline-primary">
                                     <h6 class="g-font">Web Development</h6>
                                 </button></a>
@@ -145,15 +153,20 @@
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
-                    <div class="accordion-body scheduleDiv">
-                        <p class="forStudents2">These sessions are for students registered in the Data Visualization or Full Stack Web Developer boot camps and are allowed to have one or two sessions per week.</p>
+                    <div class="accordion-body">
+                        <p class="forStudents2">These sessions are for students registered in the Data Visualization or
+                            Full Stack Web Developer boot camp and are allowed to have one or more sessions per week.
+                        </p>
 
                         <h2>Schedule Session</h2>
-                        <a target="_blank" href="https://calendly.com/dv-tutor-team/geronimo-perez"><button id="analyst"
-                                class="btn btn-outline-primary">
-                                <h6 class="g-font">Data Analytics</h6>
-                            </button></a>
-                        <div class="scheduleDev">
+
+                        <div class="scheduleDiv">
+
+                            <a target="_blank" href="https://calendly.com/dv-tutor-team/geronimo-perez"><button
+                                    id="analyst" class="btn btn-outline-primary">
+                                    <h6 class="g-font">Data Analytics</h6>
+                                </button></a>
+
                             <a target="_blank" href="https://calendly.com/fsf-tutor-team/geronimo-perez"><button
                                     id="developer" class="btn btn-outline-primary">
                                     <h6 class="g-font">Web Development</h6>
