--- a/index.html
+++ b/index.html
@@ -324,22 +324,27 @@
 
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
+                    <div class="accordion-body professionalDiv">
 
                         <h2>Schedule Private Session</h2>
-                        <a target="_blank" href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
-                                id="analyst" class="btn btn-outline-primary">
-                                <h6 class="g-font">Data Analytics</h6>
-                            </button></a>
+                        <div class="scheduleDiv">
 
-                        <a target="_blank" href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
-                                id="developer" class="btn btn-outline-primary">
-                                <h6 class="g-font">Web Development</h6>
-                            </button></a>
+                            <a target="_blank"
+                                href="https://calendly.com/geronimo-perez/private-tutoring-session"><button id="analyst"
+                                    class="btn btn-outline-primary">
+                                    <h6 class="g-font">Data Analytics</h6>
+                                </button></a>
 
+                            <a target="_blank"
+                                href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
+                                    id="developer" class="btn btn-outline-primary">
+                                    <h6 class="g-font">Web Development</h6>
+                                </button></a>
+                        </div>
                     </div>
                 </div>
             </div>
+            
         </div>
 
     </div>
