added Google's review link

--- a/index.html
+++ b/index.html
@@ -137,9 +137,15 @@
             <h4 class="text-center p-3">
                 Tutoring students and professionals one session at the time
             </h4>
-            <a target="_blank" href="https://linkedin.com/in/geronimoperez"><img src="./assets/images/linkedIn.png"
-                    class="titleImg"></a><a target="_blank" href="https://github.com/Geerooniimoo"><img
-                    class="titleImg2" src="./assets/images/github.png"></a>
+            <a target="_blank" href="https://linkedin.com/in/geronimoperez">
+                <img src="./assets/images/linkedIn.png" class="titleImg">
+            </a>
+            <a target="_blank" href="https://github.com/Geerooniimoo">
+                <img class="titleImg2" src="./assets/images/github.png">
+            </a>
+            <a target="_blank" href="https://g.page/r/CeWB47Bolh99EAI/review">
+                <img class="titleImg1" src="./assets/images/Google-Reviews.png">
+            </a>
         </div>
 
         <div class="accordion accordion-flush" id="accordionExample">
@@ -344,7 +350,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
 
     </div>
