added review us on google

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <button data-bs-toggle="modal" data-bs-target="#exampleModal2">
             Professionals
         </button>
-
     </nav>
 
     <!-- Modal -->
@@ -140,11 +139,14 @@
             <a target="_blank" href="https://linkedin.com/in/geronimoperez">
                 <img src="./assets/images/linkedIn.png" class="titleImg">
             </a>
-            <a target="_blank" href="https://github.com/Geerooniimoo">
+            <!-- <a target="_blank" href="https://github.com/Geerooniimoo">
                 <img class="titleImg2" src="./assets/images/github.png">
-            </a>
-            <a target="_blank" href="https://g.page/r/CeWB47Bolh99EAI/review">
+            </a> -->
+            <!-- <a target="_blank" href="https://g.page/r/CeWB47Bolh99EAI/review">
                 <img class="titleImg1" src="./assets/images/Google-Reviews.png">
+            </a> -->
+            <a target="_blank" href="https://g.page/r/CeWB47Bolh99EAI/review">
+                <img class="titleImg1" src="./assets/images/Google-Reviews2.png">
             </a>
         </div>
 
