--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Geronimo</title>
+    <title>Analytics And Web Development</title>
 </head>
 
 <body>
     <nav>
         <button data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Students
+            students
         </button>
 
         <button data-bs-toggle="modal" data-bs-target="#exampleModal2">
-            Professionals
+            post classes
         </button>
     </nav>
 
@@ -67,12 +67,12 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content studentModal">
                 <div class="modal-header">
-                    <h1 class="modal-title text-center" id="exampleModalLabel">Professionals</h1>
+                    <h3 class="modal-title text-center" id="exampleModalLabel">** 60 MINS FACE 2 FACE PRIVATE VIDEO CALLS **</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body professionalModal">
                     <div class="accordion-body">
-                        <h2>Schedule Private Session</h2>
+                        <h2>Schedule Session</h2>
                         <div class="scheduleDiv">
 
                             <a target="_blank"
@@ -156,7 +156,7 @@
                 <h2 class="accordion-item" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        <h4 class="mx-auto">Students</h4>
+                        <h4 class="mx-auto">students</h4>
                     </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -196,7 +196,7 @@
                 <h2 class="accordion-item" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseTwo">
-                        <h4 class="mx-auto">Knowledge base</h4>
+                        <h4 class="mx-auto">knowledge base</h4>
                     </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -326,15 +326,16 @@
                 <h2 class="accordion-item" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
-                        <h4 class="mx-auto">Professionals</h4>
+                        <h4 class="mx-auto">post classes</h4>
                     </button>
                 </h2>
 
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body professionalDiv">
-
-                        <h2>Schedule Private Session</h2>
+                        <h3 class="modal-title text-center" id="exampleModalLabel">** 60 MINS FACE 2 FACE PRIVATE VIDEO CALLS **</h3>
+                        <h3 class="modal-title text-center" id="exampleModalLabel2">** 60 MINS FACE 2 FACE PRIVATE ** <br>** VIDEO CALLS **</h3>
+                        <h2>schedule Session</h2>
                         <div class="scheduleDiv">
 
                             <a target="_blank"
