modified title location to fix website google search description

--- a/index.html
+++ b/index.html
@@ -23,76 +23,6 @@
         </button>
     </nav>
 
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-            <div class="modal-content studentModal">
-                <div class="modal-header">
-                    <h1 class="modal-title text-center" id="exampleModalLabel">Students</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="accordion-body">
-                        <p class="forStudents">These sessions are for students registered in the Data Visualization or
-                            Full Stack Web Developer boot camp and are allowed to have one or more sessions per week.
-                        </p>
-                        <h2>Schedule Session</h2>
-                        <div class="scheduleDiv">
-
-                            <a target="_blank" href="https://calendly.com/dv-tutor-team/geronimo-perez"><button
-                                    id="analyst" class="btn btn-outline-primary">
-                                    <h6 class="g-font">Data Analytics</h6>
-                                </button></a>
-
-                            <a target="_blank" href="https://calendly.com/fsf-tutor-team/geronimo-perez"><button
-                                    id="developer" class="btn btn-outline-primary">
-                                    <h6 class="g-font">Web Development</h6>
-                                </button></a>
-                        </div>
-
-                        <h2 class="evalTitle">Evaluation</h2>
-                        <a target="_blank"
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSdb4ejjbqoqKO-Q4k7zeO_xwykwB0dxYLWYm1mX5Ik45MzEeg/viewform">
-                            <button id="evaluation">
-                                <h6 class="g-font">Student's Evaluation</h6>
-                            </button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-            <div class="modal-content studentModal">
-                <div class="modal-header">
-                    <h3 class="modal-title text-center" id="exampleModalLabel">** 60 MINS FACE 2 FACE PRIVATE VIDEO CALLS **</h3>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body professionalModal">
-                    <div class="accordion-body">
-                        <h2>Schedule Session</h2>
-                        <div class="scheduleDiv">
-
-                            <a target="_blank"
-                                href="https://calendly.com/geronimo-perez/private-tutoring-session"><button id="analyst"
-                                    class="btn btn-outline-primary">
-                                    <h6 class="g-font">Data Analytics</h6>
-                                </button></a>
-
-                            <a target="_blank"
-                                href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
-                                    id="developer" class="btn btn-outline-primary">
-                                    <h6 class="g-font">Web Development</h6>
-                                </button></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div id="topDiv">
         <div class="sessions">
             <h4 class="text-center text-white fst-italic">Tutored over
@@ -133,9 +63,9 @@
         </div>
 
         <div id='title' class="text-white m-auto">
-            <h4 class="text-center p-3">
+            <p class="text-center">
                 Tutoring students and professionals one session at the time
-            </h4>
+            </p>
             <a target="_blank" href="https://linkedin.com/in/geronimoperez">
                 <img src="./assets/images/linkedIn.png" class="titleImg">
             </a>
@@ -356,6 +286,76 @@
 
         </div>
 
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content studentModal">
+                <div class="modal-header">
+                    <h1 class="modal-title text-center" id="exampleModalLabel">Students</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="accordion-body">
+                        <p class="forStudents">These sessions are for students registered in the Data Visualization or
+                            Full Stack Web Developer boot camp and are allowed to have one or more sessions per week.
+                        </p>
+                        <h2>Schedule Session</h2>
+                        <div class="scheduleDiv">
+
+                            <a target="_blank" href="https://calendly.com/dv-tutor-team/geronimo-perez"><button
+                                    id="analyst" class="btn btn-outline-primary">
+                                    <h6 class="g-font">Data Analytics</h6>
+                                </button></a>
+
+                            <a target="_blank" href="https://calendly.com/fsf-tutor-team/geronimo-perez"><button
+                                    id="developer" class="btn btn-outline-primary">
+                                    <h6 class="g-font">Web Development</h6>
+                                </button></a>
+                        </div>
+
+                        <h2 class="evalTitle">Evaluation</h2>
+                        <a target="_blank"
+                            href="https://docs.google.com/forms/d/e/1FAIpQLSdb4ejjbqoqKO-Q4k7zeO_xwykwB0dxYLWYm1mX5Ik45MzEeg/viewform">
+                            <button id="evaluation">
+                                <h6 class="g-font">Student's Evaluation</h6>
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content studentModal">
+                <div class="modal-header">
+                    <h3 class="modal-title text-center" id="exampleModalLabel">** 60 MINS FACE 2 FACE PRIVATE VIDEO CALLS **</h3>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body professionalModal">
+                    <div class="accordion-body">
+                        <h2>Schedule Session</h2>
+                        <div class="scheduleDiv">
+
+                            <a target="_blank"
+                                href="https://calendly.com/geronimo-perez/private-tutoring-session"><button id="analyst"
+                                    class="btn btn-outline-primary">
+                                    <h6 class="g-font">Data Analytics</h6>
+                                </button></a>
+
+                            <a target="_blank"
+                                href="https://calendly.com/geronimo-perez/private-tutoring-session"><button
+                                    id="developer" class="btn btn-outline-primary">
+                                    <h6 class="g-font">Web Development</h6>
+                                </button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="typeDiv">
